--- a/210120_coading_traning.html
+++ b/210120_coading_traning.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>210120_Coding_Training</title>
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/reset.css" rel="stylesheet" type="text/css">
-<link href="css/Responsive.css" rel="stylesheet" type="text/css">
+<link href="https://satori8901.github.io/satori8901.github.io/css/style.css" rel="stylesheet" type="text/css">
+<link href="https://satori8901.github.io/satori8901.github.io/css/reset.css" rel="stylesheet" type="text/css">
+<link href="https://satori8901.github.io/satori8901.github.io/css/Responsive.css" rel="stylesheet" type="text/css">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 	<header>
