--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="https://satori8901.github.io/satori8901.github.io/css/reset.css" rel="stylesheet" type="text/css">
 <link href="https://satori8901.github.io/satori8901.github.io/css/Responsive.css" rel="stylesheet" type="text/css">
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 	<header>
       <div class="container">
